--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,15 @@
-- name: OpenTofu - Setup Tofu
-  uses: opentofu/setup-opentofu@v1.0.5
+            - name: OpenTofu - Setup Tofu
+  # You may pin to the exact commit or the version.
+  # uses: opentofu/setup-opentofu@ae80d4ecaab946d8f5ff18397fbf6d0686c6d46a
+  uses: opentofu/setup-opentofu@v1.0.3
+  with:
+    # The hostname of a Terraform Cloud/Enterprise instance to place within the credentials block of the OpenTofu CLI configuration file. Defaults to `app.terraform.io`.
+    cli_config_credentials_hostname: # optional, default is app.terraform.io
+    # The API token for a Terraform Cloud/Enterprise instance to place within the credentials block of the OpenTofu CLI configuration file.
+    cli_config_credentials_token: # optional
+    # The version of OpenTofu CLI to install. If no version is given, it will default to `latest`.
+    tofu_version: # optional, default is latest
+    # Whether or not to install a wrapper to wrap subsequent calls of the `tofu` binary and expose its STDOUT, STDERR, and exit code as outputs named `stdout`, `stderr`, and `exitcode` respectively. Defaults to `true`.
+    tofu_wrapper: # optional, default is true
+    # API token for GitHub to increase the rate limit. Defaults to the GITHUB_TOKEN environment variable unless running on Forgejo/Gitea.
+    github_token: # optional, default is 
